@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.8
 
+	- Fixed wrong code generated by Fluid
+	  for Scrollbars (STR #1287)
 	- Loading a file would not update the Widget
 	  Propertis dialog in FLUID (STR #1326)
 	- Fixed key compose sequences for
